overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-test-ingress
  namespace: school-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/v1/auth-service
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/v1/googleLogin
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/v1/admission-service
            pathType: Prefix
            backend:
              service:
                name: admission-service
                port:
                  number: 80
          - path: /api/leads/v1
            pathType: Prefix
            backend:
              service:
                name: admission-service
                port:
                  number: 80
          - path: /api/v1/otp-service
            pathType: Prefix
            backend:
              service:
                name: otp-service
                port:
                  number: 80
          - path: /api/email/v1
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
