overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: school-test
  labels:
    domain: school
    environment: test
    owner: devops
